--- a/_config.yml
+++ b/_config.yml
@@ -19,17 +19,23 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Maitiú Ó Muirí
-email: your-email@example.com
+email: ""
 description: >- # this means to ignore newlines until "baseurl:"
 
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "m24murray.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "maitiuomuiri.com" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
-theme: minima
+remote_theme: mmistakes/minimal-mistakes
+minimal_mistakes_skin: default # Other options: dark, solarized, etc.
+paginate: 5
+paginate_path: "/page:num/"
+timezone: Europe/Dublin
 plugins:
+  - jekyll-paginate
+  - jekyll-sitemap
   - jekyll-feed
-
+  - jekyll-include-cache
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
@@ -49,3 +55,17 @@ plugins:
 #   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
+
+defaults:
+  # _posts
+  - scope:
+      path: ""
+      type: posts
+    values:
+      layout: single
+      author_profile: true
+      read_time: true
+      comments: true
+      share: true
+      related: true
+      show_date: true
