--- a/_config.yml
+++ b/_config.yml
@@ -63,9 +63,9 @@ defaults:
       type: posts
     values:
       layout: single
-      author_profile: true
+      author_profile: false
       read_time: true
-      comments: true
-      share: true
-      related: true
+      comments: false
+      share: false
+      related: false
       show_date: true
